syntax = "proto3";

package blog.v1;

import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";

message Blog {
  string id = 1 [
    (buf.validate.field).ignore = IGNORE_IF_ZERO_VALUE,
    (buf.validate.field).string.uuid = true
  ];
  string title = 2;
  string content = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}
